--- a/Week-3/omdbApiCall/apiCallGroupProject.html
+++ b/Week-3/omdbApiCall/apiCallGroupProject.html
@@ -17,14 +17,15 @@
         .results-box {
             display: flex;
             flex-wrap: wrap;
-            align-content: space-between;
+            align-content: space-around;
             align-items: center;
+            text-align: center;
         }
         .result-entry {
             display: flex;
             flex-direction: column;
-            flex-basis: 40%;
-            align-content: space-between;
+            flex-basis: 50%;
+            align-content: space-around;
             align-items: center;
         }
     </style>
