--- a/Week-3/BlackJack/blackJack.html
+++ b/Week-3/BlackJack/blackJack.html
@@ -6,8 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
     </head>
-    <script src="./blakcJack.js"></script>
+
     <body>
+        <button>test</button>
         <!-- game board -->
         <div>
             <!-- header -->
@@ -41,5 +42,6 @@
                 <!-- button stay -->
             </div>
         </div>
+        <script src="./blakcJack.js"></script>
     </body>
 </html>
