user hit and stay / stay trigger comp

--- a/Week-3/BlackJack/blackJack.html
+++ b/Week-3/BlackJack/blackJack.html
@@ -8,7 +8,9 @@
     </head>
 
     <body>
-        <button>test</button>
+        <button id="test">test</button>
+        <button id="hit">hit</button>
+        <button id="stay">stay</button>
         <!-- game board -->
         <div>
             <!-- header -->
