--- a/Week-3/BlackJack/blackJack.html
+++ b/Week-3/BlackJack/blackJack.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <button id="test">test</button>
+        <button id="start">Deal!</button>
         <button id="hit">hit</button>
         <button id="stay">stay</button>
         <!-- game board -->
@@ -16,9 +16,13 @@
             <!-- header -->
             <div>
                 <!-- counter: games played -->
+                <div id="">Games Played : <span id="game"></span></div>
                 <!-- counter: user wins -->
+                <div id="">User Wins : <span id="userWin"></span></div>
                 <!-- counter: house wins -->
+                <div id="">Computer Wins : <span id="compWin"></span></div>
                 <!-- counter: no wins -->
+                <div id="">Push : <span id="push"></span></div>
                 <!-- button: begin game -->
                 <!-- button: re-initialize games -->
             </div>
