--- a/Week-3/BlackJack/blackJack.html
+++ b/Week-3/BlackJack/blackJack.html
@@ -9,8 +9,8 @@
 
     <body>
         <button id="start">Deal!</button>
-        <button id="hit">hit</button>
-        <button id="stay">stay</button>
+        <button id="shuffle">Reshuffle the Deck</button>
+
         <!-- game board -->
         <div>
             <!-- header -->
@@ -28,6 +28,7 @@
             </div>
             <!-- computer cards -->
             <div>
+                <div>Computer Score : <span id="compScore"></span></div>
                 <!-- text indicating computer decision -->
                 <!-- blank card -->
                 <!-- computer showing card -->
@@ -38,14 +39,17 @@
             <div>
                 <!-- face up card -->
                 <!-- face up card -->
+                <div>User Score : <span id="userScore"></span></div>
                 <!-- running card total : total or in case of ACE 2 total options -->
-                <!-- radio : ace = 1 -->
-                <!-- radio ace = 11 -->
+                <label for="1">1</label>
+                <input type="radio" name="ace" id="1" value="1" />
+                <label for="11">11</label>
+                <input type="radio" name="ace" id="11" checked value="11" />
             </div>
             <!-- option buttons -->
             <div>
-                <!-- button hit  -->
-                <!-- button stay -->
+                <button id="hit">hit</button>
+                <button id="stay">stay</button>
             </div>
         </div>
         <script src="./blakcJack.js"></script>
