change radios to buttons

--- a/Week-3/BlackJack/blackJack.html
+++ b/Week-3/BlackJack/blackJack.html
@@ -41,10 +41,8 @@
                 <!-- face up card -->
                 <div>User Score : <span id="userScore"></span></div>
                 <!-- running card total : total or in case of ACE 2 total options -->
-                <label for="1">1</label>
-                <input type="radio" name="ace" id="1" value="1" />
-                <label for="11">11</label>
-                <input type="radio" name="ace" id="11" checked value="11" />
+                <button id="11">Ace 11</button>
+                <button is="1">Ace 1</button>
             </div>
             <!-- option buttons -->
             <div>
