select ace weight functions

--- a/Week-3/BlackJack/blackJack.html
+++ b/Week-3/BlackJack/blackJack.html
@@ -42,7 +42,7 @@
                 <div>User Score : <span id="userScore"></span></div>
                 <!-- running card total : total or in case of ACE 2 total options -->
                 <button id="11">Ace 11</button>
-                <button is="1">Ace 1</button>
+                <button id="1">Ace 1</button>
             </div>
             <!-- option buttons -->
             <div>
