trying to add card values

--- a/Week-3/BlackJack/blackJack.html
+++ b/Week-3/BlackJack/blackJack.html
@@ -28,6 +28,7 @@
             </div>
             <!-- computer cards -->
             <div>
+                <div>Computer Hand :<span id="compHand"></span></div>
                 <div>Computer Score : <span id="compScore"></span></div>
                 <!-- text indicating computer decision -->
                 <!-- blank card -->
@@ -39,6 +40,7 @@
             <div>
                 <!-- face up card -->
                 <!-- face up card -->
+                <div>User Hand :<span id="userHand"></span></div>
                 <div>User Score : <span id="userScore"></span></div>
                 <!-- running card total : total or in case of ACE 2 total options -->
                 <button id="11">Ace 11</button>
