--- a/Week-3/BlackJack/blackJack.html
+++ b/Week-3/BlackJack/blackJack.html
@@ -5,52 +5,38 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <link rel="stylesheet" href="./blakcjack.Css" />
     </head>
-
     <body>
-        <button id="newGame">New game</button>
-        <button id="hit">Hit!</button>
-        <button id="stay">Stay</button>
-        <p id="text-area"></p>
-        <button id="shuffle">Shuffle</button>
-
-        <!-- <button id="start">Deal!</button>
-        <button id="shuffle">Reshuffle the Deck</button> -->
-
         <!-- game board -->
-        <div>
+        <div class="border pageContainer">
             <!-- header -->
-            <div>
+            <div class="border header">
+                <button id="deal">Deal</button>
+                <button id="shuffle">Shuffle</button>
                 <!-- counter: games played -->
-                <!-- <div id="">Games Played : <span id="game"></span></div> -->
+                <div id="">Games Played : <span id="game"></span></div>
                 <!-- counter: user wins -->
-                <!-- <div id="">User Wins : <span id="userWin"></span></div> -->
+                <div id="">User Wins : <span id="userWin"></span></div>
                 <!-- counter: house wins -->
-                <!-- <div id="">Computer Wins : <span id="compWin"></span></div> -->
+                <div id="">Computer Wins : <span id="compWin"></span></div>
                 <!-- counter: no wins -->
-                <!-- <div id="">Push : <span id="push"></span></div> -->
+                <div id="">Push : <span id="push"></span></div>
                 <!-- button: begin game -->
                 <!-- button: re-initialize games -->
             </div>
             <!-- computer cards -->
-            <div>
-                <div id="compCards"></div>
-            </div>
+            <div id="compCards" class="border cardArea"></div>
             <!-- game status win / loss : loss type / push -->
-            <div></div>
-            <!-- User cards -->
-            <div>
-                <div id="userCards"></div>
-                <!-- <div>User Hand :<span id="userHand"></span></div>
-                <div>User Score : <span id="userScore"></span></div> -->
-                <!-- running card total : total or in case of ACE 2 total options -->
-                <!-- <button id="11">Ace 11</button>
-                <button id="1">Ace 1</button> -->
+            <div class="header" id="">
+                <p id="gameStatus"></p>
             </div>
+            <!-- User cards -->
+            <div id="userCards" class="border cardArea"></div>
             <!-- option buttons -->
-            <div>
-                <!-- <button id="hit">hit</button>
-                <button id="stay">stay</button> -->
+            <div class="header">
+                <button id="hit">Hit</button>
+                <button id="stay">Stay</button>
             </div>
         </div>
         <script src="./blakcJack.js"></script>
