hide computer card

--- a/Week-3/BlackJack/blackJack.html
+++ b/Week-3/BlackJack/blackJack.html
@@ -12,8 +12,6 @@
         <div class="pageContainer">
             <!-- header -->
             <div class="header">
-                <button id="deal">Deal</button>
-                <button id="shuffle">Shuffle</button>
                 <!-- counter: games played -->
                 <div id="">Games Played : <span id="game"></span></div>
                 <!-- counter: user wins -->
@@ -23,6 +21,10 @@
                 <!-- counter: no wins -->
                 <div id="">Push : <span id="push"></span></div>
                 <!-- button: re-initialize games -->
+            </div>
+            <div class="header">
+                <button id="deal">Deal</button>
+                <button id="shuffle">Shuffle</button>
             </div>
             <br />
             <!-- computer cards -->
